<resources>
    <string name="app_name">Get Taxi</string>
    <string name="ask_a_taxi">order a Taxi</string>
    <string name="your_e_mail">your E-mail:</string>
    <string name="your_phone">your phone:</string>
    <string name="address">Your Destination Address</string>
    <string name="your_full_name">your full name:</string>
    <string name="your_id">your id:</string>
    <string name="_0">0 %</string>
    <string name="your_loction">your Loction</string>
    <string name="welcome_to_get_taxi">welcome to get taxi</string>
    <string name="get_my_location">get my location</string>
    <string name="stop_update">Stop Update</string>
    <string name="source">Source:</string>
    <string name="destination">Destination:</string>
    <string name="gpsloc">please turn on your gps location</string>
    <string name="pressBack">Press back again to exit</string>
    <string name="prem">Until you grant the permission, we canot display the location</string>
    <string name="insertId">insert id</string>
    <string name="Error">Error</string>
    <string name="email">the email mast contain @</string>
    <string name="phone">the phone number length is not correct </string>
    <string name="id">this id not exists</string>
    <string name="location_find">we find your location</string>
    <string name="fill_email">please fill the email field</string>
    <string name="contains">the email not make sense</string>
    <string name="fill_id">please fill the id field</string>
    <string name="Extract_id">this id not extract</string>
    <string name="length_id">the length of id not make sense</string>
    <string name="fill_name">please fill the name field</string>
    <string name="fill_phone">please fill the phone field</string>
    <string name="length_phone">the phone number not make sense</string>
</resources>
